--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ $(function () {
 <!--/DARK OVERLAY-->
 
 <!--WRAP-->
-<div id="wrap">
+<div id="wrap" class="particles-js">
 	<!--CONTAINER-->
 	<div class="container">
 		<img src="images/galaxy.png" alt="Paper Plane" class="image-align" />
@@ -49,5 +49,7 @@ $(function () {
 </div>
 <!--/WRAP-->
 
+<script src="js/particles.min.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
