--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ $(function () {
 		<img src="images/galaxy.png" alt="Paper Plane" class="image-align" />
 		<h1>
 			<span>Coming Soon</span><br/>
-			Searching in <span class="yellow">Galaxy</span>
+			Searching the <span class="yellow">Galaxy</span> for topics
 		</h1>
 		<p>We will lunch <strong>CS Tpoics</strong> site mid April 2018.</p>
 		<div id="defaultCountdown"></div>
